Repositórios privados nos serviços e formulários utilizam os repositórios quando necessário.

--- a/BancoFinal/BancoFinal/ToDo.txt
+++ b/BancoFinal/BancoFinal/ToDo.txt
@@ -7,32 +7,10 @@ PROJETO BANCO FINAL
 			RETORNAR
 			ADICIONAR PARÂMETROS
 	REPOSITÓRIOS
-		HERDAR DA CONEXÃO
-		MÉTODO LISTAR
-			CRIAR LISTA
-			QUERY COMPLETA
-			EXECUTAR
-			RETORNAR
-			WHILE
-			NOVO OBJETO
-			MONTAR
-			ADICIONAR NA LISTA
-			RETORNAR LISTA
 		MÉTODOS GET E POST
-		1 MÉTODO PARA CADA PROCEDURE
-	CLASSES
-		VALIDAÇÃO
-			VALIDAR SOMENTE O QUE NÃO NECESSITA DE BANCO
-	SERVIÇOS
-		INVOCADOS NOS FORMS
-		DEVEM
-			VALIDAR
-			CHAMAR REPOS
-			POPULAR NOTIFICAÇÕES
-			RETORNA (NÃO RETORNAR OS ERROS)
-	NOTIFICAÇÕES
-		ESTÁTICA
-		ADICIONAR
-		LER
-		LIMPAR
+	SERVICOS
+		REPOSITORIO PRIVATE
+	FORMULARIOS
+		INSTANCIAR REPO SE FOR NECESSÁRIO
+		
 	
